Add content to icewater.html

--- a/recipes/icewater.html
+++ b/recipes/icewater.html
@@ -8,6 +8,14 @@
 <body>
     <h1> Ice water</h1>
     <img src = "https://etc.usf.edu/clippix/pix/clear-glass-of-ice-water_medium.jpg" alt="Ice water picture">
-    
+    <h3> Description </h3>
+    <p> You put ice in cold water. Don't do it with hot water or the ice will melt.</p> 
+    <h4> Ingredients: </h4>
+    <ul><li>A glass of not hot water</li>
+    <li>At least one ice cube that can fit in the glass of water</li></ul>
+    <h4> Steps:</h4>
+    <ol>
+        <li> Put the ice cube(s) in the glass of water</li>
+    </ol>   
 </body>
 </html>
