Add content to macbees.html

--- a/recipes/macbees.html
+++ b/recipes/macbees.html
@@ -6,6 +6,30 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Macaroni and Bees</h1>
+    <h1> Marconani and Bees</h1>
+    <img src = "https://media.istockphoto.com/id/1083507204/photo/classic-boxed-mac-and-cheese-in-a-white-bowl.jpg?s=612x612&w=0&k=20&c=cqs-Vqwo_-a1qCmWH-dMoucMmfMUQif-JVfWxG6zuig=">
+    <h3> Description </h3>
+    <p> Just a good ol' plate of marnatoni and bees </p>
+    <h4> Ingredients: </h4>
+    <ul>
+        <li> Bee hive</li>
+        <li> 1 tbsp butter</li>
+        <li> 1 tsp Silly putty</li>
+        <li> Maconi cheese</li>
+    </ul>
+
+    <h4> Steps: </h4>
+    <ol>
+        <li> Get the food </li>
+        <li> Prepare </li>
+        <li> Using a whisk, stir the putty and the mocari until the meal gets the desired texture</li>
+        <li> Clean the whisk</li>
+        <li> Put the masharori in a sieve</li>
+        <li> microwave the butter</li>
+        <li> Bone apptetite!!</li>
+    </ol>
+
+
+    
 </body>
 </html>
