Add content to pizza.html

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,6 +6,27 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Pizza</h1>
+    <h1> Pizza </h1>
+    <img src = "http://www.thesneeze.com/art/loose_art/dom8.jpg">
+    <h3> Description: </h3>
+    <p> I like pizza </p>
+    <h4> Ingredients: </h4>
+    <ul> 
+        <li> Pizza </li>
+        <li> More cheese </li>
+        <li> Maybe some french fries if you're REALLY hungry</li>
+
+    </ul>
+
+    <h4> Steps: </h4>
+    <ol>
+        <li> Get the pizza</li>
+        <li> If the pizza is not already cooked, then put it in the cooking device of choice</li>
+        <li> Make sure to take the pizza out of the box if you cook it or else you will have a fire which isn't good</li>
+        <li> On the cooked pizza, put your extra cheese or french fries if you feel the pizza needs it</li>
+        <li> Make sure to eat the crust it is there for a reason</li>
+        <li> Delicious! </li>
+
+    </ol>
 </body>
 </html>
